# aoi

./: .gitignore  README.md
.github/workflows/: build-and-release.yml  build-docker-images.yml  build.yml  release.yml  run-checks.yml  run-terraform-checks.yml
apps/www/: biome.json  next.config.ts  package.json
apps/www/src/: proxy.ts
apps/www/src/app/: globals.css  layout.tsx  page.tsx
apps/www/src/components/: active-link.tsx  create-personal-access-token-form.tsx  logout-dialog.tsx  main-menu.tsx  main-sidebar.tsx  personal-access-token-details.tsx  user-menu.tsx  (+7 more)
crates/redirector/: .dockerignore  .env.template  Cargo.toml  Dockerfile  README.md
crates/redirector/src/: failure.rs  health.rs  lib.rs  main.rs  redirects.rs  state.rs
server/: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yml  example.py  pyproject.toml
server/aoi/: app.py  config.py  exception_handlers.py  exceptions.py  logging.py  postgres.py
server/aoi/auth/: dependencies.py  models.py  permission.py  router.py  service.py
server/aoi/email/: sender.py
server/aoi/health/: router.py
server/aoi/integrations/aws/dynamodb/: client.py
server/aoi/kit/: http.py  pagination.py  refresh_tokens.py
server/aoi/kit/db/: models.py  postgres.py
server/aoi/kit/repository/: __init__.py  base.py
server/aoi/links/: auth.py  counter.py  repository.py  router.py  schemas.py  service.py  utils.py
server/aoi/login_tokens/: repository.py  router.py  schemas.py  service.py
server/aoi/models/: __init__.py  login_token.py  personal_access_token.py  session.py  user.py
server/aoi/personal_access_tokens/: auth.py  repository.py  router.py  schemas.py  service.py
server/aoi/sessions/: auth.py  repository.py  router.py  schemas.py  service.py
server/aoi/users/: auth.py  repository.py  router.py  schemas.py  service.py
server/load_tests/: README.md  __init__.py  config.py  locustfile.py
server/load_tests/common/: auth.py
server/load_tests/scenarios/: link_creation.py
server/migrations/: README.md  env.py
server/migrations/versions/: 08960ca24642_create_refresh_tokens.py  21e7ac0e0753_add_refresh_token_fields_to_sessions.py  7d8fc04d2a20_create_personal_access_tokens.py  a794f34eb97f_create_sessions.py  b50198072872_create_oauth_accounts.py  b82b14cc449b_create_users.py  cd33c24d190b_remove_refresh_tokens.py  e2e683bfd9e6_remove_oauth_accounts.py  e54f78c71ead_create_login_tokens.py
server/rinku/: app.py  config.py  enums.py  exception_handlers.py  exceptions.py  postgres.py  redis.py  router.py
server/rinku/auth/: dependencies.py  middlewares.py  models.py  router.py  service.py
server/rinku/email/: sender.py
server/rinku/health/: endpoints.py  router.py
server/rinku/integrations/aws/dynamodb/: client.py
server/rinku/integrations/google/: router.py  service.py
server/rinku/kit/: cors.py  crypto.py  http.py  oauth.py  pagination.py  schemas.py  utils.py
server/rinku/kit/db/: locking.py  models.py  postgres.py
server/rinku/kit/repository/: __init__.py  base.py
server/rinku/links/: auth.py  counter.py  repository.py  router.py  schemas.py  service.py  utils.py
server/rinku/login_tokens/: repository.py  router.py  schemas.py  service.py
server/rinku/models/: __init__.py  login_token.py  personal_access_token.py  session.py  user.py
server/rinku/personal_access_tokens/: auth.py  repository.py  router.py  schemas.py  service.py
server/rinku/sessions/: auth.py  repository.py  router.py  schemas.py  service.py
server/rinku/users/: auth.py  oauth_service.py  repository.py  router.py  schemas.py  service.py
server/scripts/: generate_openapi.py
terraform/: .gitignore  README.md
terraform/global/: .terraform.lock.hcl  main.tf  production.tf  terraform.tf
terraform/production/: .terraform.lock.hcl  acm.tf  alb.tf  cloudfront.tf  cloudwatch.tf  dns.tf  dynamodb.tf  ecr.tf  ecs.tf  iam.tf  networking.tf  postgres.tf  providers.tf  redis.tf  terraform.tf  variables.tf  vercel.tf
(+54 files in other folders)
