[project]
name = "rinku"
version = "0.1.0"
description = "Rinku is an internal authentication service that provides straighforward integration with existing codebases"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "alembic-utils>=0.8.8",
    "asyncpg>=0.31.0",
    "dramatiq>=2.1.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "httpx-oauth>=0.16.1",
    "pyjwt[crypto]>=2.12.1",
    "redis>=7.4.0",
    "safe-redirect-url>=0.1.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
serve = { cmd = "uvicorn rinku.app:rinku --reload --host 127.0.0.1 --port 8000", help = "start REST API" }
