[package]
name = "redirector"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.18", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.114.0"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
